# simple-diary-gtk

./: .gitignore  README.md  meson.build  meson_options.txt  org.johanbjare.SimpleDiary.yml
.github/: FUNDING.yml
res/: com.bjareholt.johan.SimpleDiary.desktop.in  com.bjareholt.johan.SimpleDiary.metainfo.xml.in  com.bjareholt.johan.SimpleDiary.yml  gresources.xml  meson.build
res/gtk/: entry_browser.ui  entry_delete_dialog.ui  entry_edit.ui  entry_listing.ui  entry_rename_dialog.ui  entry_view.ui  gresources.xml  image_picker.ui  settings.ui  window.ui
res/icons/: meson.build
res/ui/: entry_browser.ui  entry_delete_dialog.ui  entry_edit.ui  entry_list.ui  entry_listing.ui  entry_name_dialog.ui  entry_rename_dialog.ui  entry_view.ui  image_picker.ui  settings.ui  window.ui
resources/: entry_edit.ui  entry_view.ui  gresources.xml  image_picker.ui  meson.build  window.ui
src/: adaptive.c  entry.c  entry.h  entry_edit.c  entry_list.c  entry_list.h  entry_listing.c  entry_listing.h  entry_view.c  entry_view.h  headerbuttons.c  headerbuttons.h  image_picker.c  image_picker.h  main.c  md2html.c  md2html.h  meson.build  notification.c  notification.h  settings.c  settings.h  utils.c  utils.h  window.c  window.h
src/widgets/: entry_browser.c  entry_browser.h  entry_delete_dialog.c  entry_delete_dialog.h  entry_edit.c  entry_edit.h  entry_list.c  entry_list.h  entry_listing.c  entry_listing.h  entry_name_dialog.c  entry_name_dialog.h  entry_rename_dialog.c  entry_rename_dialog.h  entry_view.c  image_picker.c  image_picker.h  settings_view.c  settings_view.h
tools/book-generator/scripts/: md2tex.py
